<resources>
    <string name="app_name">StartPTnow</string>
    <string name="process_with_Data">Processing with data..</string>
    <string name="hint_search">Search Keywords</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="thankyou">Thank you for appointment</string>
    <string name="action_settings">Settings</string>
    <string name="error_can_not_connect_to_server">Can not connect to server</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="already_booked">Time Slot Already Booked</string>
    <string name="tab_morning">Morning</string>
    <string name="tab_afternoon">Afternoon</string>
    <string name="tab_evening">Evening</string>
    <string name="patient_contact">Patient Contact</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="contact_info">Contact Information</string>
    <string name="payment_process">Payment Process</string>
    <string name="nav_update_profile">Update Profile</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_my_appointment">My Appointment</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_share">Share</string>
    <string name="nav_rating">Rating Us</string>
    <string name="nav_login">Login</string>
    <string name="item_title">Communicate</string>
    <string name="item_user">User Manage</string>
    <string name="tab_list">List</string>
    <string name="tab_map">Map</string>
    <string name="countinue_home">Continue Home</string>
    <string name="track_my_order">Track my order</string>
    <string name="date"><b>Date</b></string>
    <string name="time"><b>Time</b></string>
    <string name="tab_service">Services</string>
    <string name="tab_details">Details</string>
    <string name="tab_reviews">Reviews</string>
    <string name="tab_photo">Photos</string>
    <string name="tab_doctors">Doctors</string>
    <string name="create_account">Create an Account</string>
    <string name="createaccount_yourfirstname">Your full name</string>
    <string name="createaccount_yourphone">Your phone</string>
    <string name="createaccount_emailaddress">Email address</string>
    <string name="createaccount_createpassword">Create password</string>
    <string name="createaccount_termsandprivacypolicy">By signing or in, you accept</string>
    <string name="createaccount_our">our</string>
    <string name="createaccount_terms">Terms</string>
    <string name="createaccount_and">and</string>
    <string name="createaccount_privacypolicy">Privacy Policy</string>
    <string name="createaccount_next">Next</string>
    <string name="login_now">Login Now</string>
    <string name="sign_in">Sign In</string>
    <string name="signin_emailaddress">Email address</string>
    <string name="signin_password">Password</string>
    <string name="signin_forgotmypassword">Forgot my password</string>
    <string name="register_new">Register new User</string>
    <string name="required">Required</string>
    <string name="cancle">Cancle</string>
    <string name="your_ratings">Your Rating</string>
    <string name="your_comment">Your Comment</string>
    <string name="your_comment_hint">Your comment here</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="contact_us">Contact Us</string>
    <string name="add_review">Add Review</string>
    <string name="send">Send</string>
    <string name="valid_required_email">Email required</string>
    <string name="valid_email">Input valid email</string>
    <string name="valid_required_password">Password required</string>
    <string name="valid_required_dob">Date of Birth required</string>
    <string name="valid_required_fullname">Fullname required</string>
    <string name="valid_required_phone">Phone required</string>
    <string name="valid_required_current_password">Required Current Password</string>
    <string name="valid_required_new_password">Required New Password</string>
    <string name="valid_not_match">Re Enter password not match</string>
    <string name="update_profile">Update Profile</string>
    <string name="change_password">Change Password</string>
    <string name="my_appointments">My Appointment</string>
    <string name="update">Update</string>
    <string name="profile_update_success">Profile Updated Successfully</string>
    <string name="new_password">New Password</string>
    <string name="cur_password">Current Password</string>
    <string name="re_password">Re Enter Password</string>
    <string name="cancel_confirmation">Are you sure to cancel appointment ?</string>
    <string name="fire">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_n_book">Confirm and Book Appointment</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="cover_area">Coverage Area : </string>
    <string name="search">Search</string>
    <string name="allow_nearby">Near By</string>
    <string name="choose_country">Choose Country</string>
    <string name="choose_city">Choose City</string>
    <string name="choose_locality">Choose Locality</string>
    <string name="choose_doctor">Choose Doctor</string>
    <string name="choose_date">Choose Date</string>
    <string name="appoitnment_confirm_message_part1">Your appointment is booked successfully, Appointment ID : </string>
    <string name="appointment_confirm_message_part2">visit My Appointment for more details</string>
    <string name="email">Email :</string>
    <string name="paid">Paid</string>
    <string name="unpaid">Un Paid</string>
    <string name="KM">KM</string>
    <string name="hr">hr.</string>
    <string name="min">min.</string>
    <string name="service_charges">Service Charge :</string>
    <string name="approx_time">Approx Time : </string>
    <string name="amount">Amount : </string>
    <string name="BOOK">BOOK</string>
    <string name="not_timetable_set">Not Timetable Set for Clinic</string>
    <string name="best_Services"> </string>
    <string name="drive_to_location">Drive to location</string>
    <string name="our_services">Our Services</string>
    <string name="reviews">Reviews</string>
    <string name="note_ins" translatable="false">If your insurance is not on this list, contact our office at (866) 446-9056. Please contact your insurance carrier
        \nto learn the specifics of your coverage.</string>
    <string name="en_language_preference">Language Preferances</string>
    <string name="en_select_your_preferred_language">Choose your preference language</string>
    <string name="english">English</string>
    <string name="appointment_note">Appointment Note:</string>
    <string name="valid_required_insurance_type">Insurance Type required</string>
    <string name="valid_required_insurance_provider">Insurance Provider required</string>
    <string name="spanish">SPANISH</string>
    <string name="by_signing_or_in_you_accept_nour_terms_and_privacy_policy">By signing or in, you accept\nour <b>Terms</b> and <b>Privacy Policy</b></string>
    <string name="note">Note</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="note2">Note:</string>
    <string name="resend">Resend</string>
    <string name="back_to_login">Back to Login</string>
    <string name="your_registered_email">Your registered email</string>
    <string name="is_still_not_verified_please_click_on_verification_link_sent_to_your_email_you_may_check_in_inbox_or_spam_folder">is still not verified please click on verification link sent to your email. You may check in inbox or spam folder.</string>
    <string name="patient_application"><![CDATA[<font color=\'#3dcdad\'>Patient Application</font>]]></string>
    <string name="photo_id">Photo ID</string>
    <string name="physican_referral" translatable="false">Physican Referral</string>
    <string name="insurance_card_if_applicable">Insurance Card (If applicable)</string>
    <string name="a_a_form_auto_accidents"><![CDATA[<font color=\'#3dcdad\'>A & A Form (Auto Accidents)</font>]]></string>
    <string name="pip_application_if_applicable"><![CDATA[<font color=\'#3dcdad\'>PIP Application (If applicable)</font>]]></string>
    <string name="note_you_must_be_contacted_and_all_information_must_be_verified_before_any_appointment_are_confirmed_by_ptsmc_staff">You will be contacted by our staff to verify
    all information prior to your appointment date/time.</string>
    <string name="ptsmc" translatable="false"><![CDATA[<font color=\'#3dcdad\'>PTSMC Patient Application</font>]]></string>
    <string name="ptsmc_pip" translatable="false"><![CDATA[<font color=\'#3dcdad\'>PIP / LITIGATION PATIENT INFORMATION</font>]]></string>
    <string name="cash_pay" translatable="false"><![CDATA[<font color=\'#3dcdad\'>SELF PAY-PATIENT INFORMATION</font>]]></string>
    <string name="prescription" translatable="false">Prescription / Referral from doctor (if your insurance requires)</string>
    <string name="current_medications" translatable="false">Current Medications</string>
    <string name="attorney_info" translatable="false"><![CDATA[<font color=\'#3dcdad\'>If Applicable, Attorney Information and A&A Form to be singed</font>]]></string>
    <string name="ptsmc_wc_apply" translatable="false"><![CDATA[<font color=\'#3dcdad\'>WORKER’S COMPENSATION PATIENT INFORMATION</font>]]></string>
    <string name="adjuster_info" translatable="false">Adjuster Information</string>
    <string name="note_insurance" translatable="false">Note: If you are a Return Patient coming back to us for a different issue/injury, please be sure to update your User Profile so that it reflects the current injury as well as the current coverage type.</string>
    <string name="services_heading" translatable="false">PHYSICAL THERAPY AND \nSPORTS MEDICINE CENTER </string>
    <string name="website" translatable="false">www.startptnow.com</string>
    <string name="services_list_header" translatable="false">BELOW IS A LIST OF SERVICES PROVIDING \nBY EACH LOCATION</string>
    <string name="bowie" translatable="false">BOWIE</string>
    <string name="greenbelt" translatable="false">GREENBELT</string>
    <string name="onley" translatable="false">OLNEY</string>
    <string name="silver_spring" translatable="false">SILVER SPRING</string>
    <string name="riverdale" translatable="false">RIVERDALE</string>
    <string name="glen_burnie" translatable="false">GLEN BURNIE</string>
    <string name="laurel" translatable="false">LAUREL</string>
    <string name="text_bowie" translatable="false"><b><big>Jennifer Gordon MSPT, CLT \nMaureen Maier, PT</big></b>\n▪ Physical Therapy \n▪ Orthopedic Physical Therapy \n▪ Geriatric Physical Therapy
        \n▪ Cardiovascular Physical Therapy \n▪ Neurological Physical Therapy
        \n▪ Sports Medicine \n▪ Balance/Vestibular Program \n▪ PIP/Auto Injuries \n▪ Workers’ Comp Rehab</string>
    <string name="text_greenbelt" translatable="false"><b><big>Terrence Gordon Cort, PT, DPT \nRaahatara M. Irfan, PT, DPT \nPallavi Agawane, MSPT </big></b>\n▪ Physical Therapy \n▪ Orthopedic Physical Therapy \n▪ Geriatric Physical Therapy
             \n▪ Cardiovascular Physical Therapy \n▪ Neurological Physical Therapy \n▪ Pediatric Physical Therapy (Dr. Raahat only)
            \n▪ Sports Medicine \n▪ Concussion Therapy \n▪ Dry Needling (Dr. Cort only) \n▪ Balance/Vestibular Program
            \n▪ PIP/Auto Injuries \n▪ Workers’ Comp Rehab \n▪ Functional Capacity Evaluation (FCE) (Dr. Cort only) \n▪ Work Hardening/Conditioning (Dr. Cort only)</string>
</resources>