<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/item_user">
        <menu>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/nav_update_profile" />
        <item
            android:id="@+id/nav_password"
            android:icon="@drawable/ic_menu_password"
            android:title="@string/nav_change_password" />

        <item
            android:id="@+id/nav_appointment"
            android:icon="@drawable/ic_menu_appointment"
            android:title="@string/nav_my_appointment" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/nav_login" />
    </group>
        </menu>
    </item>
    <item android:title="@string/item_title">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_rating"
                android:icon="@drawable/ic_menu_rating"
                android:title="@string/nav_rating" />
        </menu>

    </item>

</menu>
